:sparkles: [feat] 리포트 상세 페이지 추거ㅏ